Buildscript cleanup